Added gulp task to create serviceworker on update of any resource, using sw-precache

--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@ limitations under the License.
   </div>
 
   <script src="build/main.js"></script>
-
+  <script>
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('sw.js')
+    .then(function(registration) {
+      console.log('GULP: Service Worker registration successful with scope: ',
+       registration.scope);
+    })
+    .catch(function(err) {
+      console.log('Service Worker registration failed: ', err);
+    });
+  }
+  </script>
 </body>
 </html>
